--- a/WebApp/Views/Auctions/Delete.cshtml
+++ b/WebApp/Views/Auctions/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApp.Models.Auction
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Auction";
 }
 
 <h1>Delete</h1>
