--- a/WebApp/Views/Auctions/Index.cshtml
+++ b/WebApp/Views/Auctions/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<WebApp.Models.Auction>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Auctions";
 }
 
 <h1>Index</h1>
