--- a/WebApp/Views/Auctions/Details.cshtml
+++ b/WebApp/Views/Auctions/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApp.Models.Auction
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Auction Details";
 }
 
 <h1>Details</h1>
