--- a/WebApp/Views/Products/Create.cshtml
+++ b/WebApp/Views/Products/Create.cshtml
@@ -17,7 +17,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form method="post" enctype="multipart/form-data" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
@@ -40,6 +40,15 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
+
+            @* Input for additional files*@
+            <div>
+                <span>Select File:</span>
+                    <input type="file" name="postedFiles" multiple />
+                    <input type="submit" value="Upload" />
+                <br />
+                <span style="color:green">@Html.Raw(ViewBag.Message)</span>
             </div>
         </form>
     </div>
