--- a/WebApp/Views/Products/Details.cshtml
+++ b/WebApp/Views/Products/Details.cshtml
@@ -41,6 +41,23 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsVatExclueded)
         </dd>
+        <dt class = "col-sm-2">
+            Additional files:
+        </dt>
+        @* Display additional files*@
+        <dd class = "col-sm-10">
+               @foreach (var item in ViewBag.items)
+               {
+                   @* Display file name*@
+                   <td>@item.Name.ToString() </td>   
+ 
+                   @* Display link to action that downloads the file*@
+                   @* Params: path to the file, file name*@
+                   <td>@Html.ActionLink("Download", "Download", new { Path = item.Path.ToString(), FileName = item.Name.ToString() }) </td>
+                   <br/>
+               }
+        </dd>
+
     </dl>
 </div>
 <div>
