--- a/WebApp/Views/Products/Delete.cshtml
+++ b/WebApp/Views/Products/Delete.cshtml
@@ -37,10 +37,10 @@
             @Html.DisplayFor(model => model.VatRate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsVatExclueded)
+            @Html.DisplayNameFor(model => model.IsVatExcluded)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsVatExclueded)
+            @Html.DisplayFor(model => model.IsVatExcluded)
         </dd>
     </dl>
     
