Added files edition

--- a/WebApp/Views/Products/Create.cshtml
+++ b/WebApp/Views/Products/Create.cshtml
@@ -19,6 +19,11 @@
     <div class="col-md-6">
         <form method="post" enctype="multipart/form-data" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div>
+                <span class="text-danger">@ViewData["ErrorMessage"]</span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
                 <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
