--- a/WebApp/Views/ProductFiles/Edit.cshtml
+++ b/WebApp/Views/ProductFiles/Edit.cshtml
@@ -10,29 +10,41 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form method="post" enctype="multipart/form-data" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductFileId" />
-            <div class="form-group">
+
+            <div>
+                <span class="text-danger">@ViewData["ErrorMessage"]</span>
+            </div>
+
+            <div class="form-group" hidden>
                 <label asp-for="ProductId" class="control-label"></label>
                 <input asp-for="ProductId" class="form-control" />
                 <span asp-validation-for="ProductId" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" hidden>
                 <label asp-for="Path" class="control-label"></label>
                 <input asp-for="Path" class="form-control" />
                 <span asp-validation-for="Path" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            <div class="form-group" hidden>
                 <label asp-for="Extension" class="control-label"></label>
                 <input asp-for="Extension" class="form-control" />
                 <span asp-validation-for="Extension" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Name" class="control-label">Aktualny plik: </label>
+                <input asp-for="Name" class="form-control" readonly/>
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <br/>
+            <div>
+                <span>Select new file:</span>
+                <input type="file" name="newFile" />
+                <br />
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
