--- a/WebApp/Views/Products/Details.cshtml
+++ b/WebApp/Views/Products/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApp.Models.Product
 
 @{
-    ViewData["Title"] = "";
+    ViewData["Title"] = "Product Details";
 }
 
 <!DOCTYPE html>
@@ -45,7 +45,7 @@
             Additional files:
         </dt>
         @* Display additional files*@
-        <dd class = "col-sm-10">
+        <dt class = "col-sm-10">
                @foreach (var item in ViewBag.items)
                {
                    @* Display file name*@
@@ -54,15 +54,16 @@
                    @* Display link to action that downloads the file*@
                    @* Params: path to the file, file name*@
                    <td>@Html.ActionLink("Download", "Download", new { Path = item.Path.ToString(), FileName = item.Name.ToString() }) </td>
-                   <br/>
+                    <br />
                }
-        </dd>
+        </dt>
         @{
-                string imageName = "IMG_" + Model.ProductId+ "_" + Model.Name + ".jpg";
-                <div>
-                    <img src="~/Uploads/image/@imageName" />
-                </div>
+            string imageName = "IMAGE_" + Model.ProductId+ "_" + Model.Name + ".jpg";
         }
+
+            <div>
+                <img src="~/Uploads/image/@imageName" />
+            </div>
 
     </dl>
 </div>
