--- a/WebApp/Views/Products/Edit.cshtml
+++ b/WebApp/Views/Products/Edit.cshtml
@@ -1,7 +1,13 @@
 ﻿@model WebApp.Models.Product
 
 @{
-    ViewData["Title"] = "";
+    ViewData["Title"] = "Product Edition";
+
+    string msg;
+    if (ViewData["FileChanged"] != null)
+        msg = ViewData["FileChanged"].ToString();
+
+    int a = 1;
 }
 
 <!DOCTYPE html>
@@ -20,6 +26,15 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductId" />
+
+            <div>
+                <span class="text-danger">@ViewData["ErrorMessage"]</span>
+            </div>
+
+            <div>
+                <span class="text-success">@ViewData["FileChanged"]</span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
                 <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
@@ -45,6 +60,9 @@
                     @foreach(WebApp.Models.ProductFile file in ViewBag.ProductFiles)
                     {
                         @file.Name;
+                        <a asp-controller="ProductFiles" asp-action="Edit" asp-route-id="@file.ProductFileId">Edit</a>
+                        <br />
+
                     }
                 </div>
             <div class="form-group">
