--- a/WebApp/Views/Products/Edit.cshtml
+++ b/WebApp/Views/Products/Edit.cshtml
@@ -2,12 +2,6 @@
 
 @{
     ViewData["Title"] = "Product Edition";
-
-    string msg;
-    if (ViewData["FileChanged"] != null)
-        msg = ViewData["FileChanged"].ToString();
-
-    int a = 1;
 }
 
 <!DOCTYPE html>
@@ -32,7 +26,7 @@
             </div>
 
             <div>
-                <span class="text-success">@ViewData["FileChanged"]</span>
+                <span class="text-success">@TempData["FileChanged"]</span>
             </div>
 
             <div class="form-group">
