cookie consent, fixes in crud

--- a/WebApp/Views/Bids/Create.cshtml
+++ b/WebApp/Views/Bids/Create.cshtml
@@ -24,8 +24,8 @@
                 <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Auctionid" class="control-label"></label>
-                <select asp-for="Auctionid" class ="form-control" asp-items="ViewBag.Auctionid"></select>
+                <label asp-for="AuctionId" class="control-label"></label>
+                <select asp-for="AuctionId" class ="form-control" asp-items="ViewBag.Auctionid"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
