--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -8,10 +8,42 @@
   padding-top: 10px;
   padding-bottom: 10px; }
   .button--rounded {
-    border-radius: 25px; }
+    border-radius: 20px; }
   .button--squared {
     border-radius: 0%; }
 
 .select--language {
   margin-right: 20px;
   border-radius: 15%; }
+
+.cookie--pop--up {
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgba(0, 0, 0, 0.4); }
+  .cookie--pop--up div {
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border: 5px solid;
+    border-color: darkcyan;
+    padding: 20px;
+    text-align: justify;
+    max-width: 500px;
+    max-height: 50%; }
+  .cookie--pop--up .pop--up--buttons {
+    border: 0px;
+    text-align: center;
+    position: relative;
+    margin-top: 30px; }
