--- a/WebApp/Views/Bids/Edit.cshtml
+++ b/WebApp/Views/Bids/Edit.cshtml
@@ -26,9 +26,9 @@
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Auctionid" class="control-label"></label>
-                <select asp-for="Auctionid" class="form-control" asp-items="ViewBag.Auctionid"></select>
-                <span asp-validation-for="Auctionid" class="text-danger"></span>
+                <label asp-for="AuctionId" class="control-label"></label>
+                <select asp-for="AuctionId" class="form-control" asp-items="ViewBag.Auctionid"></select>
+                <span asp-validation-for="AuctionId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="BidTime" class="control-label"></label>
