--- a/WebApp/Views/Products/Create.cshtml
+++ b/WebApp/Views/Products/Create.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsVatExclueded" /> @Html.DisplayNameFor(model => model.IsVatExclueded)
+                    <input class="form-check-input" asp-for="IsVatExcluded" /> @Html.DisplayNameFor(model => model.IsVatExcluded)
                 </label>
             </div>
             <div class="form-group">
