--- a/WebApp/Views/Products/Index.cshtml
+++ b/WebApp/Views/Products/Index.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayNameFor(model => model.VatRate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IsVatExclueded)
+                @Html.DisplayNameFor(model => model.IsVatExcluded)
             </th>
             <th></th>
         </tr>
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.VatRate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IsVatExclueded)
+                @Html.DisplayFor(modelItem => item.IsVatExcluded)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
