--- a/WebApp/Views/Shared/_CookieConsentPartial.cshtml
+++ b/WebApp/Views/Shared/_CookieConsentPartial.cshtml
@@ -2,25 +2,39 @@
 @{
     var consentFeature = Context.Features.Get<ITrackingConsentFeature>();
     var showBanner = !consentFeature?.CanTrack ?? false;
-    var cookieString = consentFeature?.CreateConsentCookie();
-    var requiredCookieString = cookieString?.Replace(".AspNet.Consent=yes", ".AspNet.Consent=required_only");
+    if(showBanner == true && Context.Request.Cookies["CONSENT_COOKIE"] != null && Context.Request.Cookies["CONSENT_COOKIE"].ToString().ToLower() == "required_only")
+    {
+        showBanner = false;
+    }
+        var cookieString = consentFeature?.CreateConsentCookie();
+        var requiredCookieString = cookieString?.Replace("CONSENT_COOKIE=yes", "CONSENT_COOKIE=required_only");
 }
 
 @if (showBanner)
 {
-    <div id="cookieConsent" class="alert alert-info alert-dismissible fade show" role="alert">
-        <h5 class="text-secondary">This website uses cookies</h5>
-        <p class="text-primary">
-            We use cookies to ensure that we give you the best experience on our
-            website to personalise content and adverts and to analyse our traffic.
-        </p>
 
-        <button type="button" class="accept-policy close" id="required" alert" aria-label="Close" data-cookie-string="@requiredCookieString">
-            <span aria-hidden="true">Only required cookies</span>
-        </button>
-        <button type="button" class="accept-policy close" id="all" data-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
-            <span aria-hidden="true">Accept all</span>
-        </button>
+    <div class="cookie--pop--up" id="cookieConsent">
+        <div class="alert alert-info alert-dismissible background--primary show" role="alert">
+            <h3 class="text--secondary">This website uses cookies</h3>
+            <p class="text--primary">
+                We use cookies to ensure that we give you the best experience on our
+                website to personalise content and adverts and to analyse our traffic.
+            </p>
+            <h5 class="text--secondary">Required</h5>
+            <p class="text--primary">With required cookies we store only necessary preferations like choosen theme or language.</p>
+
+            <h5 class="text--secondary">All cookies</h5>
+            <p class="text--primary">Within this option we will gather information which will help us improve our website based on statistics.</p>
+            <div class="pop--up--buttons">
+                <button type="button" class="button--rounded button--primary button accept-policy close" id="required" aria-label="Close" data-cookie-string="@requiredCookieString">
+                    <span aria-hidden="true">Required only</span>
+                </button>
+                <button type="button" class="button--rounded button--primary button accept-policy close" id="all" data-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
+                    <span aria-hidden="true">Accept all</span>
+                </button>
+            </div>
+        </div>
+
     </div>
     <script>
         (function () {
