--- a/WebApp/wwwroot/Styles/dark.scss
+++ b/WebApp/wwwroot/Styles/dark.scss
@@ -57,7 +57,7 @@
 
     .background {
         &--primary {
-            background-color: black;
+            background-color: #1a1a1a;
         }
 
         &--secondary {
