--- a/WebApp/wwwroot/Styles/shared.scss
+++ b/WebApp/wwwroot/Styles/shared.scss
@@ -1,5 +1,14 @@
 ﻿body {
 }
+
+
+footer {
+    display: flex;
+    padding: 10px 20px;
+    justify-content: space-between;
+    flex-direction: row;
+}
+
 /*Wszystko inne...*/
 
 .button{
@@ -17,7 +26,6 @@
     &--squared{
         border-radius: 0%;
     }
-
 }
 
 .select{
@@ -27,4 +35,15 @@
         border-radius: 15%;
     }
 
+}
+
+.loginSection {
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+.currentLogin {
+    margin-right: 10px;
 }
