--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -1,4 +1,10 @@
-﻿/*Wszystko inne...*/
+﻿footer {
+  display: flex;
+  padding: 10px 20px;
+  justify-content: space-between;
+  flex-direction: row; }
+
+/*Wszystko inne...*/
 .button {
   border: 5px solid;
   font-weight: 600;
@@ -15,3 +21,11 @@
 .select--language {
   margin-right: 20px;
   border-radius: 15%; }
+
+.loginSection {
+  display: flex;
+  justify-items: center;
+  align-items: center; }
+
+.currentLogin {
+  margin-right: 10px; }
