--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -2,7 +2,8 @@
   display: flex;
   padding: 10px 20px;
   justify-content: space-between;
-  flex-direction: row; }
+  flex-direction: row;
+}
 
 /*Wszystko inne...*/
 .button {
@@ -12,15 +13,19 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 10px;
-  padding-bottom: 10px; }
-  .button--rounded {
-    border-radius: 20px; }
-  .button--squared {
-    border-radius: 0%; }
+  padding-bottom: 10px;
+}
+.button--rounded {
+  border-radius: 20px;
+}
+.button--squared {
+  border-radius: 0%;
+}
 
 .select--language {
   margin-right: 20px;
-  border-radius: 15%; }
+  border-radius: 15%;
+}
 
 .cookie--pop--up {
   position: fixed;
@@ -37,28 +42,33 @@
   /* Full height */
   overflow: auto;
   /* Enable scroll if needed */
-  background-color: rgba(0, 0, 0, 0.4); }
-  .cookie--pop--up div {
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    border: 5px solid;
-    border-color: darkcyan;
-    padding: 20px;
-    text-align: justify;
-    max-width: 500px;
-    max-height: 50%; }
-  .cookie--pop--up .pop--up--buttons {
-    border: 0px;
-    text-align: center;
-    position: relative;
-    margin-top: 30px; }
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.cookie--pop--up div {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border: 5px solid;
+  border-color: darkcyan;
+  padding: 20px;
+  text-align: justify;
+  max-width: 500px;
+  max-height: 50%;
+}
+.cookie--pop--up .pop--up--buttons {
+  border: 0px;
+  text-align: center;
+  position: relative;
+  margin-top: 30px;
+}
 
 .loginSection {
   display: flex;
   justify-items: center;
-  align-items: center; }
+  align-items: center;
+  flex-direction: row;
+}
 
 .currentLogin {
-  margin-right: 10px; }
-
+  margin-right: 10px;
+}
