fb, google auth

--- a/WebApp/Views/Authentication/_LoginModal.cshtml
+++ b/WebApp/Views/Authentication/_LoginModal.cshtml
@@ -1,10 +1,10 @@
 ﻿
 <div class="modal-dialog ">
-    <div class="modal-content @(Context?.Items["theme"]?.ToString() ?? "dark-mode")">
+    <div class="modal-content background--primary">
         <div class="modal-header">
             <h4 class="modal-title text--primary">Login</h4>
         </div>
-        <form id="loginForm" action="/Authentication" method="post">
+        <form id="loginForm" action="/Authentication/Login" method="post">
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-4 text-muted">
@@ -18,11 +18,15 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-primary" type="submit" value="Login">Login</button>
+                <button class="btn btn-primary" type="submit" >Login</button>
                 <button type="button" class="btn btn-default text--secondary" onclick="HideModal()">Close</button>
             </div>
         </form>
-        <button class="btn btn-primary" id="GoogleLogin" onclick="LoginGoogle()">Google</button>
+        <form action="/Authentication" method="post">
+            <input type="hidden" id="CurrentUrl" name="url" />
+            <input class="btn btn-primary" type="submit" value="Google" formaction="/Authentication/LoginGoogle"/>
+            <input class="btn btn-primary" type="submit" value="Facebook" formaction="/Authentication/LoginFacebook"/>
+        </form>
     </div>
 </div>
 
@@ -47,8 +51,7 @@
             }
         );
     });
-    function LoginGoogle()
-    {
-        $.post("@Url.Action("LoginGoogle" , "Authentication")", {url: window.location.toString()} );
-    }
+
+    $("#CurrentUrl").val(window.location.toString());
+
 </script>
