--- a/WebApp/Views/Products/Index.cshtml
+++ b/WebApp/Views/Products/Index.cshtml
@@ -54,7 +54,7 @@
             </td>
             <td>
                 <!-- Do not display icons -->
-                <img src="Uploads/icon/@iconName" onerror="this.src='Uploads/icon/NoIcon.jpg'"/>
+                <img src="Uploads/icon/@iconName"/>
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a> |
