--- a/WebApp/Views/Authentication/ResetPassword.cshtml
+++ b/WebApp/Views/Authentication/ResetPassword.cshtml
@@ -1,7 +1,7 @@
-﻿@model WebApp.Models.DTO.RegisterUserModel
+﻿@model WebApp.Models.DTO.ResetPasswordModel
 @using WebApp.Resources.Authentication
 @{
-    ViewData["Title"] = "Register AA";
+    ViewData["Title"] = "Reset password";
 }
 
 <!DOCTYPE html>
@@ -9,26 +9,17 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Register</title>
+    <title>Reset password</title>
 </head>
 <body>
 
-<h4>Register</h4>
+<h4>Reset password</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post" enctype="multipart/form-data" asp-action="Register">
+        <form method="post" enctype="multipart/form-data" asp-action="ResetPassword">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label class="control-label">@Localization.Name</label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">@Localization.Email</label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
+            <input asp-for="Guid" type="hidden" value="@Model.Guid"/>
             <div class="form-group">
                 <label class="control-label">@Localization.Password</label>
                 <input asp-for="Password" class="form-control" />
