--- a/WebApp/Views/Auctions/Create.cshtml
+++ b/WebApp/Views/Auctions/Create.cshtml
@@ -4,6 +4,24 @@
     ViewData["Title"] = "Create New Auction";
 }
 
+
+<script type="text/javascript" >
+        
+    function displayDateDialog() {
+        if ($('#draftCHechBox').is(":checked"))
+        {
+            $("#dateP").hide();
+            $("#dateE").hide();
+        }
+        else
+        {    
+            $("#dateP").show();
+            $("#dateE").show();
+        }
+    }
+
+</script>
+
 <h1>Create</h1>
 
 <h4>Auction</h4>
@@ -12,6 +30,10 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group" hidden>
+                <label asp-for="OwnerId" class="control-label"></label>
+                <input asp-for="OwnerId" class ="form-control" value="@ViewBag.OwnerId" readonly/>
+            </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
@@ -22,29 +44,30 @@
                 <select asp-for="ProductId" class ="form-control" asp-items="ViewBag.ProductId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="OwnerId" class="control-label"></label>
-                <select asp-for="OwnerId" class ="form-control" asp-items="ViewBag.OwnerId"></select>
-            </div>
-            <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
+
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input onchange="displayDateDialog()" id="draftCHechBox" class="form-check-input" asp-for="IsDraft" /> @Html.DisplayNameFor(model => model.IsDraft)
+                </label>
+            </div>
+
+            <span class="text--error">@ViewBag.DatesMsg</span>
+
+            <div class="form-group" id="dateP">
                 <label asp-for="PublishedTime" class="control-label"></label>
                 <input asp-for="PublishedTime" class="form-control" />
                 <span asp-validation-for="PublishedTime" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" id="dateE">
                 <label asp-for="EndTime" class="control-label"></label>
                 <input asp-for="EndTime" class="form-control" />
                 <span asp-validation-for="EndTime" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsDraft" /> @Html.DisplayNameFor(model => model.IsDraft)
-                </label>
-            </div>
+           
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -59,3 +82,7 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+
+
+
