--- a/WebApp/Views/Auctions/Edit.cshtml
+++ b/WebApp/Views/Auctions/Edit.cshtml
@@ -2,57 +2,91 @@
 
 @{
     ViewData["Title"] = "Edit Auction";
+    
 }
+
+
+<script type="text/javascript">
+
+    function displayDateDialog() {
+        if ($('#draftCHechBox').is(":checked")) {
+            $("#dateP").hide();
+            $("#dateE").hide();
+        }
+        else {
+            $("#dateP").show();
+            $("#dateE").show();
+        }
+    }
+
+    window.onload = function () {
+        displayDateDialog();
+    }
+
+</script>
 
 <h1>Edit</h1>
 
 <h4>Auction</h4>
 <hr />
-<div class="row">
+<div class="row" onload="displayDateDialog()">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="AuctionId" />
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+            <div class="form-group" hidden>
+                <label asp-for="OwnerId" class="control-label"></label>
+                <select asp-for="OwnerId" class="form-control" asp-items="ViewBag.OwnerId"></select>
+                <span asp-validation-for="OwnerId" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsDraft" /> @Html.DisplayNameFor(model => model.IsDraft)
-                </label>
-            </div>
             <div class="form-group">
-                <label asp-for="OwnerId" class="control-label"></label>
-                <select asp-for="OwnerId" class="form-control" asp-items="ViewBag.OwnerId"></select>
-                <span asp-validation-for="OwnerId" class="text-danger"></span>
+                <label asp-for="Description" class="control-label"></label>
+                <textarea asp-for="Description" class="form-control"></textarea>
+                <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="CreationTime" class="control-label"></label>
-                <input asp-for="CreationTime" class="form-control" />
-                <span asp-validation-for="CreationTime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PublishedTime" class="control-label"></label>
-                <input asp-for="PublishedTime" class="form-control" />
-                <span asp-validation-for="PublishedTime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EndTime" class="control-label"></label>
-                <input asp-for="EndTime" class="form-control" />
-                <span asp-validation-for="EndTime" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <label asp-for="ProductId" class="control-label"></label>
                 <select asp-for="ProductId" class="form-control" asp-items="ViewBag.ProductId"></select>
                 <span asp-validation-for="ProductId" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="CreationTime" class="control-label"></label>
+                <input asp-for="CreationTime" class="form-control" readonly />
+                <span asp-validation-for="CreationTime" class="text-danger"></span>
+            </div>
+
+            <br/>
+            <div class="form-group form-check">
+                <label class="form-check-label">
+                    <input onchange="displayDateDialog()" id="draftCHechBox" class="form-check-input" asp-for="IsDraft" /> @Html.DisplayNameFor(model => model.IsDraft)
+                </label>
+            </div>
+
+            <span class="text--error">@ViewBag.DatesMsg</span>
+
+            <div class="form-group" id="dateP">
+                <label asp-for="PublishedTime" class="control-label"></label>
+                <input asp-for="PublishedTime" class="form-control" />
+                <span asp-validation-for="PublishedTime" class="text-danger"></span>
+            </div>
+
+            <div class="form-group" id="dateE">
+                <label asp-for="EndTime" class="control-label"></label>
+                <input asp-for="EndTime" class="form-control" />
+                <span asp-validation-for="EndTime" class="text-danger"></span>
+            </div>
+
+
+
+            <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
