--- a/WebApp/wwwroot/css/dark.css
+++ b/WebApp/wwwroot/css/dark.css
@@ -43,3 +43,6 @@
 .dark-mode .background--secondary {
   background-color: lightslategrey;
 }
+.dark-mode .border--primary {
+  border-color: aliceblue;
+}
