--- a/WebApp/Views/Authentication/_LoginModal.cshtml
+++ b/WebApp/Views/Authentication/_LoginModal.cshtml
@@ -1,36 +1,43 @@
 ﻿@using Auth = WebApp.Resources.Authentication.Localization
 @using WebApp.Resources
 
-<div class="modal-dialog ">
+<div class="modal-dialog">
     <div class="modal-content background--primary">
-        <div class="modal-header">
-            <h4 class="modal-title text--primary">@Auth.Login</h4>
+        <div class=" form--heading">
+            <h4 class="text--primary">@Auth.Login</h4>
         </div>
-        <form id="loginForm" action="/Authentication/Login" method="post">
+        <form id="loginForm" action="/Authentication/Login" method="post" class="form--content">
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-md-4 text-muted">
-                        <label for="mail">@Auth.Email</label>
-                        <input type="text" id="loginFormMail" name="mail" value="admin" />
-                        <label for="password">@Auth.Password</label>
-                        <input type="password" id="loginFormPassword" name="password" value="admin" />
+                    <div class="form--group">
+                        <label for="mail" class="control--label form--label">@Auth.Email</label>
+                        <input type="text" class="control--input form--input" id="loginFormMail" name="mail" value="admin" />
+                    </div>
+                    <div class="form--group ">
+                        <label for="password" class="control--label form--label">@Auth.Password</label>
+                        <input type="password" class="control--input form--input" id="loginFormPassword" name="password" value="admin" />
+                    </div>
                         <input type="hidden" id="loginFormReturnUrl" name="url"/>
                         <div id="loginFormMessage" class="text-danger" style="display:none;">@Auth.WrongCredentials</div>
-                    </div>
-                </div>
+
             </div>
-            <div class="modal-footer">
-                <button class="btn btn-primary" type="submit">@Auth.Login</button>
-                <button type="button" class="btn btn-default text--secondary" onclick="HideModal()">@Shared.Close</button>
+            <div class="content--right">
+                    <button class="button button--primary button--rounded" type="submit">@Auth.Login</button>
+                    <a class="button button--primary button--rounded" asp-area="" asp-controller="Authentication" asp-action="Register">Register</a>
             </div>
         </form>
-        <form id="secondForm" action="/Authentication" method="post">
+        <form id="secondForm" action="/Authentication" method="post" class="form--content">
             <input type="hidden" id="CurrentUrl" name="url" />
             <input type="hidden" id="secondFormMail" name="mail" />
-            <a class="btn btn-primary" asp-area="" asp-controller="Authentication" asp-action="Register">Register</a>
-            <input class="btn btn-primary" type="submit" value="Reset password" formaction="/Authentication/SendResetPasswordMail"/>
-            <input class="btn btn-primary" type="submit" value="Google" formaction="/Authentication/LoginGoogle"/>
-            <input class="btn btn-primary" type="submit" value="Facebook" formaction="/Authentication/LoginFacebook"/>
+            <div class="content--right">
+                
+                <input class="button button--primary button--rounded" type="submit" value="Google" formaction="/Authentication/LoginGoogle" />
+                <input class="button button--primary button--rounded " type="submit" value="Facebook" formaction="/Authentication/LoginFacebook" />
+            </div>
+            <div class="content--right ">
+                <input class="button button--primary button--rounded button--smaller" type="submit" value="Reset password" formaction="/Authentication/SendResetPasswordMail" />
+                <button type="button" class="button button--primary button--rounded button--smaller" onclick="HideModal()">@Shared.Close</button>
+            </div>
         </form>
     </div>
 </div>
