--- a/WebApp/Views/Products/Create.cshtml
+++ b/WebApp/Views/Products/Create.cshtml
@@ -45,7 +45,7 @@
 
     </script>
 
-<div class="form--contianer container">
+<div class="form--container container">
 <div class="form--heading">
     <h3 class="text--secondary">Add Product</h3>
 </div>
