--- a/WebApp/wwwroot/css/shared.css
+++ b/WebApp/wwwroot/css/shared.css
@@ -230,3 +230,17 @@ input[type=file] {
   width: 75%;
   float: right;
 }
+
+.content--right {
+  text-align: right;
+  margin-bottom: 2vh;
+}
+.content--right .button {
+  margin: 0.2vh 0.2vw;
+}
+.content--right .button--smaller {
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
